Add bootstrap css back in (for now)

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -19,7 +19,7 @@
     <!-- build:css assets/css/style.css -->
     <link href="assets/css/roboto.css" rel="stylesheet">
     <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <!--<link href="assets/css/bootstrap.css" rel="stylesheet">-->
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
     <!--<link href="assets/css/awesome-bootstrap-checkbox.css" rel="stylesheet">-->
     <link href="assets/css/select2/select2.css" rel="stylesheet">
     <link href="assets/css/select2/select2-bootstrap.css" rel="stylesheet">
