Add home page and route for a project.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -91,6 +91,7 @@
 
 <!-- Component: Project -->
 <script src="components/project/mc-project.component.js"></script>
+<script src="components/project/mc-project-home.component.js"></script>
 <script src="components/project/mc-project-samples.component.js"></script>
 
 <!-- Component: Sample -->
