--- a/website/app/index.html
+++ b/website/app/index.html
@@ -65,9 +65,11 @@
 <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
 <script src="bower_components/angular-drag-and-drop-lists/angular-drag-and-drop-lists.min.js"></script>
 <script src="bower_components/angular-material-data-table/dist/md-data-table.min.js"></script>
+<script src="bower_components/ag-grid/dist/angular-grid.min.js"></script>
 
 <!-- get from bower -->
 <script src="assets/js/angular/angular-filter.js"></script>
+<script src="assets/js/TreeModel-min.js"></script>
 
 <!-- These are needed for the full size calendar -->
 <script src="assets/js/moment.min.js"></script>
@@ -103,6 +105,12 @@
 <!-- Component: processes -->
 <script src="components/processes/mc-processes.component.js"></script>
 
+<!-- Component: file-tree -->
+<script src="components/file-tree/mc-file-tree.component.js"></script>
+<script src="components/file-tree/dir/mc-dir.component.js"></script>
+<script src="components/file-tree/dir/mc-dir-controls.component.js"></script>
+<script src="components/file-tree/dir/mc-dir-overview.component.js"></script>
+
 <!-- These need to moved to different directories -->
 <!-- Global Services -->
 <script src="application/services/user-service.js"></script>
@@ -113,11 +121,17 @@
 <script src="application/services/cached-service-factory-service.js"></script>
 <script src="application/services/model/projects-service.js"></script>
 
+<script src="application/services/pubsub-service.js"></script>
+<script src="application/services/grid-files.js"></script>
+<script src="application/services/file-type-service.js"></script>
+<script src="application/services/mcfile.js"></script>
+
+<script src="services/project.service.js"></script>
+
 <!-- needed for home-calendar -->
 <script src="application/services/events.js"></script>
 
 <!-- Turn into component -->
-<script src="application/core/projects/project/home/home.js"></script>
 
 <!-- Misc directives -->
 <script src="index/navbar.js"></script>
@@ -128,6 +142,9 @@
 <!-- filters -->
 <script src="application/filters/todatestring-filter.js"></script>
 <script src="application/filters/bytes.js"></script>
+
+<!-- Utility functions -->
+<script src="application/util/util.js"></script>
 
 <!-- endbuild -->
 </body>
