Translate dir overview over. Start using mcmodal with the bootstrap modal. This is a hack as I am using materials styling in a bootstrap modal. However I don't have time to rewrite the logic for all the modals, so updating the styling is the first step.
We'll be stuck with bootstrap styling for a little while.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -67,6 +67,8 @@
 <script src="bower_components/angular-material-data-table/dist/md-data-table.min.js"></script>
 <script src="bower_components/ag-grid/dist/angular-grid.min.js"></script>
 
+<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+
 <!-- get from bower -->
 <script src="assets/js/angular/angular-filter.js"></script>
 <script src="assets/js/TreeModel-min.js"></script>
@@ -125,6 +127,15 @@
 <script src="application/services/grid-files.js"></script>
 <script src="application/services/file-type-service.js"></script>
 <script src="application/services/mcfile.js"></script>
+
+<!-- mcmodal and dependencies -->
+<script src="application/services/mcmodal/mcmodal.js"></script>
+<script src="application/services/mcmodal/choose-users-controller.js"></script>
+<script src="application/services/mcmodal/existing-process-controller.js"></script>
+<script src="application/services/mcmodal/image-controller.js"></script>
+<script src="application/services/mcmodal/prefill-controller.js"></script>
+<script src="application/services/mcmodal/setup_view_controller.js"></script>
+<script src="application/services/mcmodal/templates-modal-controller.js"></script>
 
 <script src="services/project.service.js"></script>
 
