--- a/website/app/index/navbar.html
+++ b/website/app/index/navbar.html
@@ -2,7 +2,7 @@
     <div class="md-toolbar-tools">
         <h1><a ng-click="ctrl.home()">MaterialsCommons</a></h1>
         <span flex-offset="30"></span>
-        <md-input-container md-no-float flex="40" style="padding-bottom:0; margin-bottom: 0">
+        <md-input-container md-no-float flex="40" class="md-input-bottom-0">
             <input placeholder="SEARCH PROJECT..." type="text"
                    ng-model="ctrl.query"
                    on-enter="ctrl.search()"
