file controls and description converted to materials/components.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -112,6 +112,9 @@
 <script src="components/file-tree/dir/mc-dir.component.js"></script>
 <script src="components/file-tree/dir/mc-dir-controls.component.js"></script>
 <script src="components/file-tree/dir/mc-dir-overview.component.js"></script>
+<script src="components/file-tree/file/mc-file.component.js"></script>
+<script src="components/file-tree/file/mc-file-edit-controls.component.js"></script>
+<script src="components/file-tree/file/mc-file-description.component.js"></script>
 
 <!-- These need to moved to different directories -->
 <!-- Global Services -->
@@ -136,6 +139,7 @@
 <script src="application/services/mcmodal/prefill-controller.js"></script>
 <script src="application/services/mcmodal/setup_view_controller.js"></script>
 <script src="application/services/mcmodal/templates-modal-controller.js"></script>
+<script src="application/services/select-items-service.js"></script>
 
 <script src="services/project.service.js"></script>
 
