Display file contents and fix file not resolved in promise for directive children.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -115,6 +115,7 @@
 <script src="components/file-tree/file/mc-file.component.js"></script>
 <script src="components/file-tree/file/mc-file-edit-controls.component.js"></script>
 <script src="components/file-tree/file/mc-file-description.component.js"></script>
+<script src="application/directives/display-file-contents-directive.js"></script>
 
 <!-- These need to moved to different directories -->
 <!-- Global Services -->
