Convert back to top navbar for project. Rework file tree and routes.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -97,6 +97,7 @@
 <script src="components/project/mc-project.component.js"></script>
 <script src="components/project/mc-project-home.component.js"></script>
 <script src="components/project/mc-project-samples.component.js"></script>
+<script src="components/project/mc-project-navbar.js"></script>
 
 <!-- Component: Sample -->
 <script src="components/sample/mc-sample.component.js"></script>
