--- a/website/app/index/navbar.html
+++ b/website/app/index/navbar.html
@@ -10,6 +10,7 @@
         </md-input-container>
         <span flex></span>
         <div layout="row" layout-align="space-around">
+            <md-button ui-sref="projects">Projects</md-button>
             <md-button>Help</md-button>
             <md-menu>
                 <md-button ng-click="$mdOpenMenu($event)">
