--- a/website/app/index.html
+++ b/website/app/index.html
@@ -96,8 +96,10 @@
 <!-- Component: Project -->
 <script src="components/project/mc-project.component.js"></script>
 <script src="components/project/mc-project-home.component.js"></script>
-<script src="components/project/mc-project-samples.component.js"></script>
 <script src="components/project/mc-project-navbar.js"></script>
+
+<!-- Component: Samples -->
+<script src="components/project/samples/mc-project-samples.component.js"></script>
 
 <!-- Component: Sample -->
 <script src="components/sample/mc-sample.component.js"></script>
