Add support for processes.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -97,12 +97,14 @@
 <script src="components/project/mc-project.component.js"></script>
 <script src="components/project/mc-project-home.component.js"></script>
 <script src="components/project/mc-project-navbar.js"></script>
-
-<!-- Component: Samples -->
 <script src="components/project/samples/mc-project-samples.component.js"></script>
+<script src="components/project/processes/mc-project-processes.component.js"></script>
 
 <!-- Component: Sample -->
 <script src="components/sample/mc-sample.component.js"></script>
+
+<!-- Component: Process -->
+<script src="components/process/mc-process.component.js"></script>
 
 <!-- Component: files -->
 <script src="components/files/mc-files.component.js"></script>
