Change colors of sidebar. Put project name in project navbar. Move projects out of navbar and put Change in project navbar.

--- a/website/app/application/core/projects/project/project-nav-bar.html
+++ b/website/app/application/core/projects/project/project-nav-bar.html
@@ -34,6 +34,7 @@
         </md-tabs>
     </div>
     <span flex></span>
+    <md-button style="color: white">{{ctrl.project.name}}</md-button>
     <div ng-if="true">
         <md-menu style="color: white">
             <md-button ng-click="$mdOpenMenu($event)">
