--- a/website/app/index/navbar.html
+++ b/website/app/index/navbar.html
@@ -3,7 +3,7 @@
         <h1><a ng-click="ctrl.home()">MaterialsCommons</a></h1>
         <span flex-offset="5"></span>
         <md-input-container md-no-float flex="50" class="md-input-bottom-0">
-            <input placeholder="SEARCH PROJECT..." type="text"
+            <input placeholder="{{ctrl.placeholder}}" type="text"
                    ng-model="ctrl.query"
                    on-enter="ctrl.search()"
                    style="color:white; border-bottom-color:white">
