--- a/website/app/index/navbar.html
+++ b/website/app/index/navbar.html
@@ -1,4 +1,4 @@
-<md-toolbar>
+<md-toolbar style="background-color: #2c3e50">
     <div class="md-toolbar-tools">
         <h1><a ng-click="ctrl.home()">MaterialsCommons</a></h1>
         <span flex-offset="5"></span>
