--- a/website/app/index/navbar.html
+++ b/website/app/index/navbar.html
@@ -1,6 +1,6 @@
 <md-toolbar style="background-color: #2c3e50">
     <div class="md-toolbar-tools">
-        <h1><a ng-click="ctrl.home()">MaterialsCommons</a></h1>
+        <h1><a ui-sref="projects">MaterialsCommons</a></h1>
         <span flex-offset="5"></span>
         <md-input-container md-no-float flex="50" class="md-input-bottom-0">
             <input placeholder="{{ctrl.placeholder}}" type="text"
@@ -36,7 +36,7 @@
                     </md-menu-item>
                     <md-menu-divider></md-menu-divider>
                     <md-menu-item>
-                        <a ui-sref="logout">
+                        <a ng-click="ctrl.logout()">
                             <i class="fa fa-fw fa-sign-out space-right"></i>
                             Logout
                         </a>
