--- a/website/app/index/navbar.html
+++ b/website/app/index/navbar.html
@@ -3,7 +3,7 @@
         <h1><a ui-sref="projects">MaterialsCommons</a></h1>
         <span flex-offset="5"></span>
         <md-input-container md-no-float flex="50" class="md-input-bottom-0">
-            <input placeholder="{{ctrl.placeholder}}" type="text"
+            <input placeholder="{{navbarSearchText}}" type="text"
                    ng-model="ctrl.query"
                    on-enter="ctrl.search()"
                    style="color:white; border-bottom-color:white">
@@ -17,19 +17,19 @@
                 </md-button>
                 <md-menu-content>
                     <md-menu-item>
-                        <a ui-sref="account.password">
+                        <a ui-sref="user.password">
                             <i class="fa fa-fw fa-unlock-alt space-right"></i>
                             Change Password
                         </a>
                     </md-menu-item>
                     <md-menu-item>
-                        <a ui-sref="account.settings">
+                        <a ui-sref="user.settings">
                             <i class="fa fa-fw fa-user space-right"></i>
                             Account Settings
                         </a>
                     </md-menu-item>
                     <md-menu-item>
-                        <a ui-sref="account.apikey">
+                        <a ui-sref="user.apikey">
                             <i class="fa fa-fw fa-key space-right"></i>
                             Apikey
                         </a>
