Add reset password. Add in focus service.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -95,6 +95,7 @@
 
 <!-- Component: User -->
 <script src="components/user/mc-user-apikey.component.js"></script>
+<script src="components/user/mc-user-password.component.js"></script>
 
 <!-- Component: Projects -->
 <script src="components/projects/mc-projects.component.js"></script>
@@ -155,6 +156,7 @@
 <script src="application/services/select-items-service.js"></script>
 
 <script src="services/project.service.js"></script>
+<script src="application/services/focus.js"></script>
 
 <!-- needed for home-calendar -->
 <script src="application/services/events.js"></script>
