Add search for projects.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -107,6 +107,7 @@
 <script src="components/project/samples/mc-project-samples.component.js"></script>
 <script src="components/project/processes/mc-project-processes.component.js"></script>
 <script src="components/project/settings/mc-project-settings.component.js"></script>
+<script src="components/project/search/mc-project-search.component.js"></script>
 
 <!-- Component: Sample -->
 <script src="components/sample/mc-sample.component.js"></script>
