--- a/website/app/index.html
+++ b/website/app/index.html
@@ -114,6 +114,9 @@
 
 <!-- Component: Process -->
 <script src="components/process/mc-process.component.js"></script>
+<script src="components/process/create/mc-process-create.component.js"></script>
+<script src="components/process/create/create-as-received.component.js"></script>
+<script src="components/process/create/processing-settings.js"></script>
 
 <!-- Component: files -->
 <script src="components/files/mc-files.component.js"></script>
@@ -145,6 +148,12 @@
 <script src="application/services/grid-files.js"></script>
 <script src="application/services/file-type-service.js"></script>
 <script src="application/services/mcfile.js"></script>
+<script src="services/project.service.js"></script>
+<script src="application/services/focus.js"></script>
+<script src="application/processes/process-templates.service.js"></script>
+<script src="application/processes/processes.js"></script>
+<script src="services/templates.service.js"></script>
+<script src="services/template.service.js"></script>
 
 <!-- mcmodal and dependencies -->
 <script src="application/services/mcmodal/mcmodal.js"></script>
@@ -155,9 +164,6 @@
 <script src="application/services/mcmodal/setup_view_controller.js"></script>
 <script src="application/services/mcmodal/templates-modal-controller.js"></script>
 <script src="application/services/select-items-service.js"></script>
-
-<script src="services/project.service.js"></script>
-<script src="application/services/focus.js"></script>
 
 <!-- needed for home-calendar -->
 <script src="application/services/events.js"></script>
