Refactor original sample creation into a set of services to make the controller simpler.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -121,7 +121,8 @@
 <script src="project/processes/process/mc-process.component.js"></script>
 <script src="project/processes/process/create/mc-process-create.component.js"></script>
 <script src="project/processes/process/create/create-as-received.component.js"></script>
-<script src="project/processes/process/create/processing-settings.js"></script>
+<script src="project/processes/process/create/components/processing-settings.directive.js"></script>
+<script src="project/processes/process/create/components/periodic-table.directive.js"></script>
 
 <!-- project/samples -->
 <script src="project/samples/mc-project-samples.component.js"></script>
