--- a/website/app/project/processes/process/create/create-as-received.html
+++ b/website/app/project/processes/process/create/create-as-received.html
@@ -9,6 +9,8 @@
                 <textarea rows="10" ng-model="ctrl.sample.description">
                 </textarea>
         </md-input-container>
+        <label>Composition</label>
+        <periodic-table doc="$ctrl.doc"></periodic-table>
     </div>
     <span flex></span>
     <div layout="column" flex="45">
@@ -19,50 +21,48 @@
                 <input type="number" ng-model="$ctrl.sampleGroupSize">
             </md-input-container>
         </div>
+        <!--<div ng-if="false">-->
+        <!--<div ng-if="ctrl.sampleGroup">-->
+        <!--<md-radio-group ng-model="$ctrl.sampleGroupSize">-->
+        <!--<md-radio-button value="set-size">Set sample group size</md-radio-button>-->
+        <!--<md-radio-button value="as-needed">Create samples as needed</md-radio-button>-->
+        <!--</md-radio-group>-->
+        <!--</div>-->
+        <!--</div>-->
         <process-settings settings="$ctrl.process.setup.settings[0].properties"></process-settings>
     </div>
 
-    <!--<div ng-if="false">-->
-    <!--<div ng-if="ctrl.sampleGroup">-->
-    <!--<md-radio-group ng-model="$ctrl.sampleGroupSize">-->
-    <!--<md-radio-button value="set-size">Set sample group size</md-radio-button>-->
-    <!--<md-radio-button value="as-needed">Create samples as needed</md-radio-button>-->
-    <!--</md-radio-group>-->
-    <!--</div>-->
-    <!--</div>-->
+    <md-button class="md-primary md-raised" ng-click="$ctrl.chooseInputFiles()"><i class="fa fa-fw fa-plus"></i> Input
+        Files
+    </md-button>
+    <md-button class="md-primary md-raised" ng-click="$ctrl.submitSample()">Submit</md-button>
+    <md-button class="md-primary md-raised" ng-click="$ctrl.submitAndAnother()">Submit and Another</md-button>
+    <md-button class="md-warn md-raised" ng-click="$ctrl.cancel()">Cancel</md-button>
 
-    <!--<process-settings settings="$ctrl.process.setup.settings[0].properties"></process-settings>-->
+    <md-divider></md-divider>
 
-    <!--<label>Composition</label>-->
-    <!--<periodic-table doc="$ctrl.doc"></periodic-table>-->
-    <!--<md-button ng-click="$ctrl.chooseInputFiles()"><i class="fa fa-fw fa-plus"></i> Input Files</md-button>-->
-    <!--<md-button ng-click="$ctrl.submitSample()">Submit</md-button>-->
-    <!--<md-button ng-click="$ctrl.submitAndAnother()">Submit and Another</md-button>-->
-    <!--<md-button ng-click="$ctrl.cancel()">Cancel</md-button>-->
-
-    <!--<md-divider></md-divider>-->
-    <!--<div class="row" ng-if="false">-->
-    <!--<div class="col-xs-12">-->
-    <!--<table ng-if="ctrl.process.input_samples.length || ctrl.process.input_files.length || ctrl.process.output_files.length"-->
-    <!--class="table table-striped">-->
-    <!--<thead>-->
-    <!--<tr>-->
-    <!--<th>Type</th>-->
-    <!--<th>Name</th>-->
-    <!--<th></th>-->
-    <!--<th></th>-->
-    <!--</tr>-->
-    <!--</thead>-->
-    <!--<tbody>-->
-    <!--<tr ng-repeat="file in ctrl.process.input_files | orderBy:'name'">-->
-    <!--<td>Input File</td>-->
-    <!--<td>{{file.name}}</td>-->
-    <!--<td></td>-->
-    <!--<td><a ng-click="ctrl.remove(ctrl.process.input_files, file)"><i class="fa fa-close"></i></a></td>-->
-    <!--</tr>-->
-    <!--</tbody>-->
-    <!--</table>-->
-    <!--</div>-->
-    <!--</div>-->
-
+    <md-table-container>
+        <table md-table ng-if="ctrl.process.input_samples.length || ctrl.process.input_files.length || ctrl.process.output_files.length">
+            <thead md-head>
+            <tr md-row>
+                <th md-column>Type</th>
+                <th md-column>Name</th>
+                <th md-column></th>
+                <th md-column></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr md-row ng-repeat="file in ctrl.process.input_files | orderBy:'name'">
+                <td md-cell>Input File</td>
+                <td md-cell>{{file.name}}</td>
+                <td md-cell></td>
+                <td md-cell>
+                    <md-button class="md-warn" ng-click="ctrl.remove(ctrl.process.input_files, file)">
+                        <i class="fa fa-close"></i>
+                    </md-button>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </md-table-container>
 </div>
