--- a/website/app/index.html
+++ b/website/app/index.html
@@ -119,10 +119,14 @@
 <!-- project/processes -->
 <script src="project/processes/mc-project-processes.component.js"></script>
 <script src="project/processes/process/mc-process.component.js"></script>
+<script src="project/processes/process/services/process-edit.service.js"></script>
 <script src="project/processes/process/create/mc-process-create.component.js"></script>
 <script src="project/processes/process/create/create-as-received.component.js"></script>
 <script src="project/processes/process/create/components/processing-settings.directive.js"></script>
 <script src="project/processes/process/create/components/periodic-table.directive.js"></script>
+<script src="project/processes/process/create/services/create-process.service.js"></script>
+<script src="project/processes/process/create/services/prepare-created-sample.service.js"></script>
+<script src="project/processes/process/create/services/process-selections.service.js"></script>
 
 <!-- project/samples -->
 <script src="project/samples/mc-project-samples.component.js"></script>
@@ -188,6 +192,9 @@
 <script src="global.services/cached-service-factory.service.js"></script>
 <script src="global.services/model/projects-service.js"></script>
 <script src="global.services/focus.service.js"></script>
+<script src="global.services/on-change.service.js"></script>
+<script src="global.services/previous-state.service.js"></script>
+<script src="global.services/projects-api.service.js"></script>
 
 <!-- global.components -->
 <script src="global.components/navbar.directive.js"></script>
