--- a/website/app/project/processes/process/create/create-as-received.html
+++ b/website/app/project/processes/process/create/create-as-received.html
@@ -35,6 +35,7 @@
     <md-button class="md-primary md-raised" ng-click="$ctrl.chooseInputFiles()"><i class="fa fa-fw fa-plus"></i> Input
         Files
     </md-button>
+    <span flex></span>
     <md-button class="md-primary md-raised" ng-click="$ctrl.submitSample()">Submit</md-button>
     <md-button class="md-primary md-raised" ng-click="$ctrl.submitAndAnother()">Submit and Another</md-button>
     <md-button class="md-warn md-raised" ng-click="$ctrl.cancel()">Cancel</md-button>
