Call periodic-table directive with composition rather than doc argument.

--- a/website/app/project/processes/process/create/create-as-received.html
+++ b/website/app/project/processes/process/create/create-as-received.html
@@ -10,7 +10,7 @@
                 </textarea>
         </md-input-container>
         <label>Composition</label>
-        <periodic-table doc="$ctrl.composition"></periodic-table>
+        <periodic-table composition="$ctrl.composition"></periodic-table>
     </div>
     <span flex></span>
     <div layout="column" flex="45">
