--- a/website/app/project/processes/process/create/create-as-received.html
+++ b/website/app/project/processes/process/create/create-as-received.html
@@ -32,8 +32,8 @@
         <process-settings settings="$ctrl.process.setup.settings[0].properties"></process-settings>
     </div>
 
-    <md-button class="md-primary md-raised" ng-click="$ctrl.chooseInputFiles()"><i class="fa fa-fw fa-plus"></i> Input
-        Files
+    <md-button class="md-primary md-raised" ng-click="$ctrl.chooseInputFiles()">
+        <i class="fa fa-fw fa-plus"></i> Input Files
     </md-button>
     <span flex></span>
     <md-button class="md-primary md-raised" ng-click="$ctrl.submit()">Submit</md-button>
@@ -43,7 +43,8 @@
     <md-divider></md-divider>
 
     <md-table-container>
-        <table md-table ng-if="ctrl.process.input_samples.length || ctrl.process.input_files.length || ctrl.process.output_files.length">
+        <table md-table
+               ng-if="ctrl.process.input_samples.length || ctrl.process.input_files.length || ctrl.process.output_files.length">
             <thead md-head>
             <tr md-row>
                 <th md-column>Type</th>
