--- a/website/app/project/processes/process/create/create-other.html
+++ b/website/app/project/processes/process/create/create-other.html
@@ -10,90 +10,44 @@
                 </textarea>
         </md-input-container>
     </div>
-    <div class="col-xs-5">
-        Name
-        <div class="row">
-            <input placeholder="name..." ng-model="ctrl.process.name"
-                   class="form-control col-xs-8">
-        </div>
-        Description
-        <div class="row">
-                <textarea placeholder="description..." rows="10" ng-model="ctrl.process.what"
-                          class="form-control col-xs-8">
-                </textarea>
-        </div>
-        <div class="row">
-            <ul class="list-inline">
-                <li>
-                    <button ng-click="ctrl.chooseSamples()"
-                            class="btn btn-default btn-sample">
-                        <i class="fa fa-fw fa-plus"></i> Samples
-                    </button>
-                </li>
-                <li>
-                    <button ng-click="ctrl.chooseInputFiles()"
-                            class="btn btn-default btn-files">
-                        <i class="fa fa-fw fa-plus"></i> Input Files
-                    </button>
-                </li>
-                <li>
-                    <button ng-click="ctrl.chooseOutputFiles()"
-                            class="btn btn-default btn-files">
-                        <i class="fa fa-fw fa-plus"></i> Output Files
-                    </button>
-                </li>
-            </ul>
-        </div>
-        <div class="row">
-            <div class="col-xs-12">
-                <ul class="list-inline" style="padding-top:50px">
-                    <li>
-                        <button ng-click="ctrl.submit()"
-                                class="btn btn-default btn-info">
-                            Submit
-                        </button>
-                    </li>
-                    <li>
-                        <button ng-click="ctrl.submitAndAnother()"
-                                class="btn btn-default btn-info">
-                            Submit And Another
-                        </button>
-                    </li>
-                    <li>
-                        <button ng-click="ctrl.cancel()"
-                                class="btn btn-default btn-danger">
-                            Cancel
-                        </button>
-                    </li>
-                </ul>
-            </div>
-        </div>
+    <span flex></span>
+    <div layout="column" flex="45">
+        <process-settings settings="$ctrl.process.setup.settings[0].properties"></process-settings>
     </div>
+    <md-button class="md-primary md-raised" ng-click="$ctrl.chooseInputFiles()">
+        <i class="fa fa-fw fa-plus"></i> Input Files
+    </md-button>
+    <md-button class="md-primary md-raised" ng-click="$ctrl.chooseOutputFiles()">
+        <i class="fa fa-fw fa-plus"></i> Input Files
+    </md-button>
+    <md-button class="md-primary md-raised" ng-click="$ctrl.chooseSamples()">
+        <i class="fa fa-fw fa-plus"></i> Input Files
+    </md-button>
+    <span flex></span>
+    <md-button class="md-primary md-raised" ng-click="$ctrl.submit()">Submit</md-button>
+    <md-button class="md-primary md-raised" ng-click="$ctrl.submitAndAnother()">Submit and Another</md-button>
+    <md-button class="md-warn md-raised" ng-click="$ctrl.cancel()">Cancel</md-button>
 
-    <div class="col-xs-7">
-        <process-settings settings="ctrl.process.setup.settings[0].properties"></process-settings>
-    </div>
-</div>
-<hr class="divider">
-<div class="row">
-    <div class="col-xs-12">
-        <table ng-if="ctrl.process.input_samples.length || ctrl.process.input_files.length || ctrl.process.output_files.length"
-               class="table table-striped">
-            <thead>
-            <tr>
-                <th>Type</th>
-                <th>Name</th>
-                <th></th>
-                <th></th>
+    <md-divider></md-divider>
+
+    <md-table-container>
+        <table md-table
+               ng-if="$ctrl.process.input_samples.length || $ctrl.process.input_files.length || $ctrl.process.output_files.length">
+            <thead md-head>
+            <tr md-row>
+                <th md-column>Type</th>
+                <th md-column>Name</th>
+                <th md-column></th>
+                <th md-column></th>
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="sample in ctrl.process.input_samples | orderBy:'name'">
-                <td>Sample</td>
-                <td>{{sample.name}}</td>
-                <td>
-                    <a ng-if="ctrl.process.input_files.length || ctrl.process.output_files.length"
-                       ng-click="ctrl.linkFilesToSample(sample, ctrl.process.input_files, ctrl.process.output_files)">
+            <tr md-row ng-repeat="sample in $ctrl.process.input_samples | orderBy:'name'">
+                <td md-cell>Sample</td>
+                <td md-cell>{{sample.name}}</td>
+                <td md-cell>
+                    <a ng-if="$ctrl.process.input_files.length || $ctrl.process.output_files.length"
+                       ng-click="$ctrl.linkFilesToSample(sample, $ctrl.process.input_files, $ctrl.process.output_files)">
                         Link Files
                     </a>
                     <ul class="list-unstyled">
@@ -102,25 +56,33 @@
                         </li>
                     </ul>
                 </td>
-                <td>
-                    <a ng-click="ctrl.remove(ctrl.process.input_samples, sample)">
+                <td md-cell>
+                    <a ng-click="$ctrl.remove(ctrl.process.input_samples, sample)">
                         <i class="fa fa-close"></i>
                     </a>
                 </td>
             </tr>
-            <tr ng-repeat="file in ctrl.process.input_files | orderBy:'name'">
-                <td>Input File</td>
-                <td>{{file.name}}</td>
-                <td></td>
-                <td><a ng-click="ctrl.remove(ctrl.process.input_files, file)"><i class="fa fa-close"></i></a></td>
+            <tr md-row ng-repeat="file in $ctrl.process.input_files | orderBy:'name'">
+                <td md-cell>Input File</td>
+                <td md-cell>{{file.name}}</td>
+                <td md-cell></td>
+                <td md-cell>
+                    <a ng-click="$ctrl.remove($ctrl.process.input_files, file)">
+                        <i class="fa fa-close"></i>
+                    </a>
+                </td>
             </tr>
-            <tr ng-repeat="file in ctrl.process.output_files | orderBy:'name'">
-                <td>Output File</td>
-                <td>{{file.name}}</td>
-                <td></td>
-                <td><a ng-click="ctrl.remove(ctrl.process.output_files, file)"><i class="fa fa-close"></i></a></td>
+            <tr md-row ng-repeat="file in $ctrl.process.output_files | orderBy:'name'">
+                <td md-cell>Output File</td>
+                <td md-cell>{{file.name}}</td>
+                <td md-cell></td>
+                <td md-cell>
+                    <a ng-click="$ctrl.remove($ctrl.process.output_files, file)">
+                        <i class="fa fa-close"></i>
+                    </a>
+                </td>
             </tr>
             </tbody>
         </table>
-    </div>
+    </md-table-container>
 </div>
