Move linking samples into a service. Move files under new layout.

--- a/website/app/project/processes/process/services/link-files-to-sample.html
+++ b/website/app/project/processes/process/services/link-files-to-sample.html
@@ -7,8 +7,8 @@
             <a class="file" ng-click="sample.linkAllFiles()">
                 Link all files
             </a>
-            <a class="file" ng-click="sample.unlinkAllFiles()"
-               class="col-xs-offset-1">
+            <a ng-click="sample.unlinkAllFiles()"
+               class="file col-xs-offset-1">
                 Unlink all files
             </a>
         </span>
