Add back menu for choosing how to create a process.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -120,8 +120,10 @@
 <script src="project/processes/mc-project-processes.component.js"></script>
 <script src="project/processes/process/mc-process.component.js"></script>
 <script src="project/processes/process/services/process-edit.service.js"></script>
+<script src="project/processes/process/services/sample-linker.service.js"></script>
 <script src="project/processes/process/create/mc-process-create.component.js"></script>
 <script src="project/processes/process/create/create-as-received.component.js"></script>
+<script src="project/processes/process/create/create-other.component.js"></script>
 <script src="project/processes/process/create/components/processing-settings.directive.js"></script>
 <script src="project/processes/process/create/components/periodic-table.directive.js"></script>
 <script src="project/processes/process/create/services/create-process.service.js"></script>
