--- a/website/app/project/processes/mc-project-processes.html
+++ b/website/app/project/processes/mc-project-processes.html
@@ -2,7 +2,7 @@
     <md-sidenav flex="25" class="md-whiteframe-4dp"
                 md-is-locked-open="true">
         <div layout="column" layout-align="center end">
-            <md-button ui-sref="project.processes.new({process:'As Received', process_id:''})"
+            <md-button ui-sref="project.processes.create({process:'As Received', process_id:''})"
                        layout-align="center end" class="md-primary">
                 <i class="fa fa-fw fa-plus"></i>Create New Process
             </md-button>
