Add directive for editing a process.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -121,6 +121,7 @@
 <script src="project/processes/process/mc-process.component.js"></script>
 <script src="project/processes/process/services/process-edit.service.js"></script>
 <script src="project/processes/process/services/sample-linker.service.js"></script>
+<script src="project/processes/process/services/process.service.js"></script>
 <script src="project/processes/process/create/mc-process-create.component.js"></script>
 <script src="project/processes/process/create/create-as-received.component.js"></script>
 <script src="project/processes/process/create/create-other.component.js"></script>
@@ -128,7 +129,8 @@
 <script src="project/processes/process/create/components/periodic-table.directive.js"></script>
 <script src="project/processes/process/create/services/create-process.service.js"></script>
 <script src="project/processes/process/create/services/prepare-created-sample.service.js"></script>
-<script src="project/processes/process/create/services/process-selections.service.js"></script>
+<script src="project/processes/process/edit/mc-process-edit.component.js"></script>
+<script src="project/processes/process/services/process-selections.service.js"></script>
 
 <!-- project/samples -->
 <script src="project/samples/mc-project-samples.component.js"></script>
