Move menu of items for creating a process into a component. On the home page the menu changes the size of the process box. Add an adjustment to make all boxes the same size.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -202,6 +202,7 @@
 
 <!-- global.components -->
 <script src="global.components/navbar.directive.js"></script>
+<script src="project/components/mc-new-process-menu.component.js"></script>
 
 <!-- global.filters -->
 <script src="global.filters/todatestring-filter.js"></script>
