Add in file and sample selection.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -102,6 +102,10 @@
 <script src="project/components/files-list/mc-files-list.component.js"></script>
 <script src="project/components/processes-list/mc-processes-list.component.js"></script>
 <script src="project/components/display-file-contents-directive.js"></script>
+<script src="project/components/select-items/select-items-files.js"></script>
+<script src="project/components/select-items/select-items-processes.js"></script>
+<script src="project/components/select-items/select-items-samples.js"></script>
+
 
 <!-- project/home -->
 <script src="project/home/mc-project-home.component.js"></script>
